# snackAttackPOS

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  LitePOS.sln  PosBackend.sln
backend/LitePOS.Api/: LitePOS.Api.csproj  Program.cs  appsettings.json
backend/LitePOS.Api/Controllers/: AuthController.cs  CategoriesController.cs  CustomersController.cs  InventoryController.cs  ProductsController.cs  ReportsController.cs  SalesController.cs  SettingsController.cs
backend/LitePOS.Api/Data/: DatabaseInitializer.cs  LitePosDbContext.cs
backend/LitePOS.Api/Entities/: AppUser.cs  Category.cs  Customer.cs  InventoryAdjustment.cs  Product.cs  ProductModifier.cs  ProductVariant.cs  RefreshToken.cs  Sale.cs  (+3 more)
docs/: README.md  desktop-app.md  desktop-post-install.md  docker-build-troubleshooting.md  electron.md  inventory-onboarding.md  pos-logic-improvements.md  scanner-setup.md  weighted-products.md
docs/troubleshooting/: electron-native-modules.md  npm-install.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.electron.json  vite.config.ts
frontend/electron/: barcode.ts  docker.ts  main.ts  preload.ts
frontend/scripts/: build-electron.mjs  postinstall-rebuild.mjs  rollup-native-shim.cjs  run-vite-with-rollup-shim.mjs
frontend/src/: App.tsx  index.css  main.tsx
infra/: .env.example  docker-compose.yml
ml/: Dockerfile  pyproject.toml
ml/app/: main.py
scripts/: bootstrap.sh  ensure-rollup-native.js
(+244 files in other folders)
