[project]
name = "aurora-pos-ml"
version = "0.1.0"
description = "ML microservices for Aurora POS"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.26.0",
    "scikit-learn==1.3.2",
    "pandas==2.1.4",
    "numpy==1.26.3",
    "statsmodels==0.14.1"
]

[project.optional-dependencies]
dev = ["pytest==7.4.4"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
